@@ -364,7 +364,7 @@ class Smarty_Security {
                 return true;
             }
             // abort if we've reached root
-            if (($pos = strrpos($directory, DS)) === false || strlen($directory) < 2) {
+            if (($pos = strrpos($directory, DS)) === false || !isset($directory[2])) {
                 break;
             }
             // bubble up one level
@@ -412,7 +412,7 @@ class Smarty_Security {
                 return true;
             }
             // abort if we've reached root
-            if (($pos = strrpos($directory, DS)) === false || strlen($directory) < 2) {
+            if (($pos = strrpos($directory, DS)) === false || !isset($directory[2])) {
                 break;
             }
             // bubble up one level
